# ambulance-hospital-doctor

./: .gitignore  ARCHITECTURE_AND_METHODOLOGY.md  Improvements_Needed.txt  README.md  ambulance_agent.py  ambulance_data.py  ambulances_kolkata.csv  api.py  app.py  app_enhanced.py  city_map.py  core_engine.py  data.py  doctors_kolkata.csv  experiment.ipynb  historical_incidents_kolkata.csv  hospitals_kolkata.csv  identity_credential.json  pyproject.toml  requirements.txt  risk_profiles_kolkata.csv  zones_kolkata.csv  zynd_wrapper.py
doctor_faiss_index/: index.faiss  index.pkl
emergency-response-app/app/: globals.css  page.tsx
emergency-response-app/components/auth/: login-page.tsx
emergency-response-app/components/dashboards/: admin-dashboard.tsx  ambulance-app.tsx  citizen-portal.tsx  doctor-triage.tsx  hospital-console.tsx
emergency-response-app/components/shared/: header.tsx
